Fixed Area A1 Alignments. Added max input area maxwidth

--- a/src/AllJumbledUp/AllJumbledUp.css
+++ b/src/AllJumbledUp/AllJumbledUp.css
@@ -2,7 +2,7 @@
     -fx-background-color: white;
     -fx-background-radius: 5.0;
     -fx-background-insets: 0.0 5.0 0.0 5.0;
-    -fx-padding: 10;
-    -fx-hgap: 30;
-    -fx-vgap: 30;
+    -fx-padding: 20;
+    -fx-hgap: 10;
+    -fx-vgap: 10;
 }
